<resources>
    <string name="app_name">LSP</string>
    <string name="title_home">图片</string>
    <string name="title_movie">视频</string>
    <string name="title_discovery">发现</string>
    <string name="title_mine">我的</string>

    <string name="title_app_pwd">密码访问</string>
    <string name="title_input_pwd">请输入密码</string>
    <string name="title_clear_cache">清除缓存</string>
    <string name="text_final_version">Version 1.0</string>
    <string name="text_album_count">0P</string>
    <string name="text_search">搜索</string>
    <string name="text_hot_search">热门搜索</string>
    <string name="text_pwd_verified">验证密码</string>
    <string name="text_pwd_error">密码错误!</string>

    <string name="label_chosen">精选</string>
    <string name="label_latest">最新</string>
    <string name="label_hottest">最热</string>
    <string name="label_category">类别</string>
    <string name="label_motel">模特</string>
    <string name="label_team">机构</string>

    <string name="title_fed">富二代</string>
    <string name="title_myg">名优馆</string>
</resources>
