<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/tv_discovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:text="@string/title_discovery"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_gray_round"
        android:hint="@string/text_search"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="#9DA0A3"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_discovery" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toBottomOf="@id/tv_search">

                <com.tokyonth.mz.view.DiscoveryClassView
                    android:id="@+id/dis_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:discoveryTitle="@string/label_category" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_motel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toBottomOf="@id/card_category">

                <com.tokyonth.mz.view.DiscoveryClassView
                    android:id="@+id/dis_motel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:discoveryTitle="@string/label_motel" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toBottomOf="@id/card_motel">

                <com.tokyonth.mz.view.DiscoveryClassView
                    android:id="@+id/dis_team"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:discoveryTitle="@string/label_team" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
